--- a/index.html
+++ b/index.html
@@ -119,21 +119,21 @@
 								</li>
 								<li class="icon solid fa-laptop">
 									<h3>Qual mídia paga posso escolher?</h3>
-									<p>Escolher em qual plataforma você vai investir em uma mídia paga é entender a localização e o comportamento do seu público alvo.
+									<p>scolher em qual plataforma você vai investir em uma mídia paga é entender a localização e o comportamento do seu público alvo.
 
-										Para quem trabalha oferecendo um serviço e não um produto, existe o LinkedIn Ads, que vai otimizar o seu conteúdo para aparecer com quem tem um comportamento compatível com a sua marca</p>
+										Tudo tem que ver especificamente com o produto ou serviço que você quer oferecer, se quer criar um desejo pode elegir entre facebook Ads ou google Ads se tem um serviço de necessidade, assessoramos você para que possa fazer a melhor eleição, que de grandes resultados a seu negocio. </p>
 									
 								</li>
 								<li class="icon solid fa-code">
 									<h3>Como funciona a mídia paga?</h3>
 									<p>Cada mídia paga tem as suas características de cadastro e direcionamento, mas a operação costuma ser muito parecida.
 
-										É preciso ter um perfil comercial na plataforma escolhida e selecionar a opção de impulsionamento, ou de campanha paga. Na hora de cadastrar o que vale é a sua estratégia, já que as opções de segmentação são escolhidas por quem investe.</p>
+										É preciso ter um perfil comercial na plataforma escolhida e selecionar a opção de campanha paga. Na hora de cadastrar o que vale é a sua estratégia, já que as opções de segmentação são escolhidas por quem investe mais  estamos ali para selecionar as melhores estrategias e assim conseguir mais rapidamente seu objetivo</p>
 									
 								</li>
 								<li class="icon solid fa-headphones-alt">
 									<h3>Quanto custa o investimento em uma mídia paga?</h3>
-									<p>Os valores das mídias pagas são flexíveis e depende do que você está disposto a pagar. Para ter uma boa métrica, comece com uma margem de segurança e faça o cálculo do valor investido nos anúncios com o que foi vendido durante a campanha. Assim você pode entender melhor como a mídia paga funciona para o seu negócio e qual é o teto que você pode atingir.
+									<p>Os valores das mídias pagas são flexíveis e depende do que você está disposto a pagar. Para ter uma boa métrica, comece com uma margem de segurança e faça o cálculo do valor investido nos anúncios com o que foi vendido durante a campanha. Assim você pode entender melhor como a mídia paga funciona para o seu negócio e qual é o teto que você pode atingir. Para isso estamos aqui, com a finalidade de ajudar você a invistir a quantidade certa para obter os melhores resultados
 
 										Gostou das nossas dicas para começar a investir em mídias pagas? Para manter seu negócio atualizado com as melhores dicas de marketing digital acompanhe o Blog da Ciclo.</p>
 								</li>
@@ -146,11 +146,11 @@
 				<br>
 				<br>
 				<h1 class="nome1">Andy Carolina Gelviz Davila</h1>
-<p class="nome1"> Meu nome é Andy Carolina Gelviz Davila sou Gestor de Tráfego Pago. Há mais de 1 ano atuo no mercado do Marketing Digital . Já gerenciei mais de 20 contas de anúncios.
+<p class="nome1"> Meu nome é Andy Carolina Gelviz Davila sou Gestora de Tráfego Pago. Há mais de 1 ano atuo no mercado do Marketing Digital . Já gerenciei mais de 10 contas de anúncios.
 
-	Em minha experiência de trabalho passei por muitas frentes relacionadas como: gestão, planejamento de projetos, relacionamento com clientes, comunicação e apresentação de projetos. Assim como conhecimentos específicos em inbound, tráfego, produção, execução e análise continuamente atualizados com o mercado.
+	Em minha experiência de trabalho passei por muitas frentes relacionadas como: gestão, planejamento de projetos, relacionamento com clientes, comunicação e apresentação de projetos. Assim como conhecimentos específicos tráfego, produção, execução e análise continuamente atualizados com o mercado.
 	
-	Atualmente sou o CEO da Agência Olhando o Futuro com Trafego Pago. Tenho como objetivo atuar como gestor de tráfego na àrea de marketing digital. Com visão humana e estratégica, buscando unir visão de mercado e desenvolvimento empresarial.</p>
+	Atualmente sou o CEO da Agência Olhando o Futuro com Trafego Pago. Tenho como objetivo atuar como gestora de tráfego na àrea de marketing digital. Com visão humana e estratégica, buscando unir visão de mercado e desenvolvimento empresarial.</p>
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
@@ -161,7 +161,7 @@
 
 								<h2>Agora, ATENÇÃO!</h2>
 								<p>O que é preciso para contratar meus serviços? </p>
-								<p>Muito simples, basta clicar no botão abaixo e preencher o formulário para que nossa equipe de especialistas entre em contato com você.</p>
+								<p>Muito simples, basta clicar no botão do lado para que nossa equipe de especialistas entre em contato com você.</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="#" class="button fit primary">Fale comigo!</a></li>
